- overflow fixes

--- a/src/parts/List/List.scss
+++ b/src/parts/List/List.scss
@@ -6,11 +6,11 @@
   background: white;
   box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1);
   height: 100%;
-  max-height: 600px;
+  max-height: 558px;
   overflow-y: auto;
   -ms-overflow-style: none;
 overflow: -moz-scrollbars-none;
-transition: 0.25s ease;
+transition: 0.15s ease;
 }
 
 .emptyList
