--- a/src/views/MainView/MainView.scss
+++ b/src/views/MainView/MainView.scss
@@ -5,4 +5,5 @@
   width: 100%;
   padding: 10px;
   height: 100%;
+  overflow: hidden;
 }
